[package]
name = "postman_issue_11625"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "postman-server"
path = "src/main.rs"

[dependencies]
tonic = { git = "https://github.com/hyperium/tonic", branch = "master" }
tonic-web = { git = "https://github.com/hyperium/tonic", branch = "master" }
tonic-reflection = { git = "https://github.com/hyperium/tonic", branch = "master" }
tokio = { version = "1.23", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3.25"
prost = "0.11.6"
prost-types = "0.11.6"

[build-dependencies]
glob = "0.3.1"
prost-build = "0.11.8"
tonic-build = { git = "https://github.com/hyperium/tonic", branch = "master" }
